--- a/app/Resources/assets/scss/student_view.scss
+++ b/app/Resources/assets/scss/student_view.scss
@@ -45,7 +45,21 @@
   margin-right: 0.5rem;
 }
 
-.student_subtitle {
+.student-title {
+  width: 100%;
+
+  h1 {
+    color: var(--primary);
+    margin-bottom: 1.5rem;
+  }
+
+  img {
+    width: 100%;
+    margin-bottom: 1.5rem;
+  }
+}
+
+.student-subtitle {
   display: flex;
 }
 
@@ -64,7 +78,107 @@
   left: 0;
 }
 
-.presentation_info {
+.student-progress {
+  height: 5px;
+}
+
+.presentation-summary {
+  width: 100%;
+
+  .media {
+    @media (min-width: 768px) {
+      & {
+        float: left;
+        max-width: 50%;
+
+      }
+    }
+
+    & > img, & > div.embed-responsive {
+      max-height: calc(100% - 1rem);
+
+      @media (min-width: 768px) {
+        & {
+          max-width: calc(100% - 1rem);
+        }
+      }
+    }
+
+  }
+}
+
+.student-grid {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  flex-direction: column;
+
+  @media (min-width: 992px) {
+    & {
+      flex-direction: row;
+    }
+  }
+
+  .grid-element {
+    max-width: 100%;
+    flex: 0 0 100%;
+
+    &:not(:first-child) {
+      margin-top: 2rem;
+    }
+
+    @media (min-width: 992px) {
+      & {
+        max-width: 33.3333%;
+        flex: 0 0 33.33333%;
+        margin-left: 4rem;
+      }
+
+      &:not(:first-child) {
+        margin-top: 0rem;
+      }
+
+      &:not(:last-child) {
+        border-right: 1px solid;
+      }
+    }
+
+    .student-subtitle {
+      justify-content: center;
+
+      @media (min-width: 992px) {
+        & {
+          justify-content: flex-start;
+        }
+      }
+    }
+
+    ul {
+      list-style: none;
+      padding-left: 0;
+      margin-top: 1rem;
+
+      li {
+        display: flex;
+        justify-content: center;
+
+        @media (min-width: 992px) {
+          & {
+            justify-content: flex-start;
+          }
+        }
+
+        i {
+          color: var(--primary);
+          margin-right: 0.8rem;
+        }
+      }
+    }
+  }
+}
+
+
+.presentation-info {
   background-color: $dark-light;
   text-align: center;
 
@@ -74,7 +188,7 @@
     }
   }
 
-  .student_subtitle {
+  .student-subtitle {
     justify-content: center;
 
     @media (min-width: 768px) {
@@ -101,98 +215,3 @@
   }
 }
 
-.presentation_summary {
-  width: 100%;
-
-  .media {
-    @media (min-width: 768px) {
-      & {
-        float: left;
-        max-width: 50%;
-
-      }
-    }
-
-    & > img, & > div.embed-responsive {
-      max-height: calc(100% - 1rem);
-
-      @media (min-width: 768px) {
-        & {
-          max-width: calc(100% - 1rem);
-        }
-      }
-    }
-
-  }
-}
-
-
-.teaching-modes {
-  display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
-  flex-direction: column;
-
-  @media (min-width: 992px) {
-    & {
-      flex-direction: row;
-    }
-  }
-
-  .teaching-mode {
-    max-width: 100%;
-    flex: 0 0 100%;
-    text-align: center;
-
-    &:not(:first-child) {
-      margin-top: 2rem;
-    }
-
-    @media (min-width: 992px) {
-      & {
-        max-width: 33.3333%;
-        flex: 0 0 33.33333%;
-        margin-left: 4rem;
-        text-align: left;
-      }
-
-      &:not(:first-child) {
-        margin-top: 0rem;
-      }
-
-      &:not(:last-child) {
-        border-right: 1px solid;
-      }
-    }
-
-    .teaching-mode_title {
-      display: flex;
-      justify-content: center;
-
-      @media (min-width: 992px) {
-        & {
-          justify-content: flex-start;
-        }
-      }
-
-      img {
-        width: 40px;
-        margin-right: 1rem;
-      }
-    }
-
-    ul {
-      list-style: none;
-      padding-left: 0;
-      margin-top: 1rem;
-
-      li {
-
-        i {
-          color: var(--primary);
-          margin-right: 0.8rem;
-        }
-      }
-    }
-  }
-}
