--- a/app/Resources/views/course_info/view/student_evaluation.html.twig
+++ b/app/Resources/views/course_info/view/student_evaluation.html.twig
@@ -1,44 +1,40 @@
-<section id="evaluation-section" class="content">
-    <h3 class="blue_uca mt-5">{{ 'app.view.student.tabs.evaluation' | trans }}</h3>
-    <input type="image" src="/build/images/modalite_photo.jpg">
-
-    <div class="row mt-4">
-        <div class="col-4 pr-5">
-            <div>
+<section id="evaluation-section" class="mb-5">
+    <div class="student-title">
+        <h1 class="text-primary">{{ 'app.view.student.tabs.evaluation' | trans }}</h1>
+        <img src="{{ asset('build/images/modalite_photo.jpg') }}" alt="">
+    </div>
+    <div class="row">
+        <div class="col col-12 col-lg-5 pr-5 mb-4">
+            <div class="mb-4">
                 {{ 'app.evaluation.view.continuous_assessment' | trans }}
                 {% if courseInfo.mccCcCoeffSession1 is not null %}
                     ({{ courseInfo.mccCcCoeffSession1 }}%)
-                    <div class="progress" style="height: 5px;">
+                    <div class="progress student-progress">
                         <div class="progress-bar" role="progressbar" style="width: {{ courseInfo.mccCcCoeffSession1 }}%;" aria-valuenow="{{ courseInfo.mccCcCoeffSession1 }}" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
                 {% endif %}
             </div>
-            <div class="mt-3">
+            <div>
                 {{ 'app.evaluation.view.exam' | trans }}
                 {% if courseInfo.mccCtCoeffSession1 is not null %}
                     ({{ courseInfo.mccCtCoeffSession1 }}%)
-                    <div class="progress" style="height: 5px;">
+                    <div class="progress student-progress">
                         <div class="progress-bar" role="progressbar" style="width: {{ courseInfo.mccCtCoeffSession1 }}%;" aria-valuenow="{{ courseInfo.mccCtCoeffSession1 }}" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
                 {% endif %}
             </div>
-
         </div>
-
-        <div class="col-8">
+        <div class="col col-12 col-lg-7 mb-4">
             <p>
                 {{ 'app.view.student.objectives.evaluation_description' | trans }}
             </p>
         </div>
-        <div class="col-4 mt-3">
-            {{ 'app.evaluation.view.specifications' | trans }}
-            <p>
-                {{ courseInfo.mccAdvice|humanizeEmptyData() | purify }}
-            </p>
-        </div>
-
-
     </div>
+    <span>{{ 'app.evaluation.view.specifications' | trans }}</span>
+    <p>
+        {{ courseInfo.mccAdvice|humanizeEmptyData() | purify }}
+    </p>
+
 
 
 </section>
