--- a/app/Resources/views/course_info/view/student_objectives.html.twig
+++ b/app/Resources/views/course_info/view/student_objectives.html.twig
@@ -1,17 +1,20 @@
-<section id="objectives-section" class="content">
-    <h3 class="blue_uca mt-5">{{ 'app.view.student.tabs.objectives' | trans }}</h3>
-    <div class="row">
-        <div class="col-4">
-            <img class="img-fluid" src="/build/images/objectif_photo.jpg">
-        </div>
-        <div class="col-8 px-5">
-            <p class="ml-4 text-bold">
-                {{ 'app.view.student.objectives.achievements_description' | trans }}
-            </p>
-            <ul class="blue_uca">
+<section id="objectives-section" class="mb-5">
+    <div class="student-title">
+        <h1 class="text-primary">{{ 'app.view.student.tabs.objectives' | trans }}</h1>
+        <img src="{{ asset('build/images/objectif_photo.jpg') }}" alt="">
+    </div>
+    <div class="student-grid">
+        <div class="grid-element">
+            <div class="student-subtitle">
+                <span class="text-bold">{{ 'app.view.student.objectives.achievements_description' | trans }}</span>
+            </div>
+            <ul class="text-primary">
                 {% if courseInfo.courseAchievements is not empty %}
                     {% for achievement in courseInfo.courseAchievements %}
-                        <li>{{ achievement.description }}</li>
+                        <li>
+                            <i class="fas fa-check"></i>
+                            {{ achievement.description }}
+                        </li>
                     {% endfor %}
                 {% endif %}
             </ul>
