--- a/app/Resources/views/course_info/view/student_info.html.twig
+++ b/app/Resources/views/course_info/view/student_info.html.twig
@@ -1,5 +1,5 @@
 <section id="information-section" class="content">
-    <h3 class="blue_uca mt-5">{{ 'app.view.student.tabs.info' | trans }}</h3>
+    <h3 class="text-primary mt-5">{{ 'app.view.student.tabs.info' | trans }}</h3>
     <input type="image" src="/build/images/information_photo.jpg">
 
     <div class="row mt-4">
