--- a/app/Resources/views/course_info/view/view.html.twig
+++ b/app/Resources/views/course_info/view/view.html.twig
@@ -4,6 +4,7 @@
         <div class="background_student col-1"></div>
         <div class="container-fluid p-0 background_student col-10">
             {% include 'course_info/view/student_presentation.html.twig' %}
+            {% include 'course_info/view/student_prerequisite.html.twig' %}
             {% include 'course_info/view/student_objectives.html.twig' %}
             {% include 'course_info/view/student_evaluation.html.twig' %}
             {% include 'course_info/view/student_equipments.html.twig' %}
