--- a/app/Resources/views/course_info/view/student_info.html.twig
+++ b/app/Resources/views/course_info/view/student_info.html.twig
@@ -1,22 +1,22 @@
-<section id="information-section" class="content">
-    <h3 class="blue_uca mt-5">{{ 'app.view.student.tabs.info' | trans }}</h3>
-    <input type="image" src="/build/images/information_photo.jpg">
-
-    <div class="row mt-4">
-        <div class="col-4">
-            <input class="student-icon" type="image" src="/build/images/calendrier_picto.png">
-            {{ 'app.view.student.info.agenda' | trans }}
-            <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-            </p>
+<section id="information-section" class="mb-5">
+    <div class="student-title">
+        <h1 class="text-primary">{{ 'app.view.student.tabs.info' | trans }}</h1>
+        <img src="{{ asset('build/images/information_photo.jpg') }}" alt="">
+    </div>
+    <div class="student-grid">
+        <div class="grid-element">
+            <div class="student-subtitle mb-3">
+                <img src="{{ asset('build/images/calendrier_picto.png') }}" class="icon-40" alt="">
+                <h5 class="title-underlined">{{ 'app.view.student.info.agenda' | trans }}</h5>
+            </div>
+            {{ courseInfo.agenda|purify }}
         </div>
-        <div class="col-4">
-            <input class="student-icon" type="image" src="/build/images/organisation_picto.png">
-            {{ 'app.view.student.info.organization' | trans }}
-            <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-            </p>
+        <div class="grid-element">
+            <div class="student-subtitle mb-3">
+                <img src="{{ asset('build/images/organisation_picto.png') }}" class="icon-40" alt="">
+                <h5 class="title-underlined">{{ 'app.view.student.info.organization' | trans }}</h5>
+            </div>
+            {{ courseInfo.organization|purify }}
         </div>
-        <div class="col-4"></div>
     </div>
 </section>
