Fix in student-grid li elements an offset between image and text on top

--- a/app/Resources/assets/scss/student_view.scss
+++ b/app/Resources/assets/scss/student_view.scss
@@ -171,6 +171,7 @@
         i {
           color: var(--primary);
           margin-right: 0.8rem;
+          margin-top: 0.3rem;
         }
       }
     }
