--- a/app/Resources/views/course_info/view/student_teaching_mode_dist.html.twig
+++ b/app/Resources/views/course_info/view/student_teaching_mode_dist.html.twig
@@ -11,7 +11,7 @@
         <img src="{{ asset('build/images/distanciel_picto.png') }}" class="icon-40" alt="">
         <h5 class="title-underlined">{{ 'app.view.student.presentation.distant' | trans }}</h5>
     </div>
-    <ul>
+    <ul class="grid-element-list">
         {% if teachingCm is not empty %}
             <li>
                 <i class="fas fa-check text-primary"></i>
