--- a/app/Resources/views/course_info/view/student_teaching_mode_in_class.html.twig
+++ b/app/Resources/views/course_info/view/student_teaching_mode_in_class.html.twig
@@ -13,7 +13,7 @@
         <img src="{{ asset('build/images/presentiel_picto.png') }}" class="icon-40" alt="">
         <h5 class="title-underlined">{{ 'app.view.student.presentation.class' | trans }}</h5>
     </div>
-    <ul>
+    <ul class="grid-element-list">
         {% if teachingCm is not null %}
             <li>
                 <i class="fas fa-check text-primary"></i>
