--- a/app/Resources/assets/scss/student_view.scss
+++ b/app/Resources/assets/scss/student_view.scss
@@ -53,16 +53,22 @@
   border-left: 3px solid #46aed8;
 }
 
-.icon-40 {
-  width: 40px;
-  height: 40px;
-  margin-right: 1rem;
-}
-
 .icon-20 {
   width: 20px;
   height: 20px;
   margin-right: 0.5rem;
+}
+
+.icon-30 {
+  width: 30px;
+  height: 30px;
+  margin-right: 1rem;
+}
+
+.icon-40 {
+  width: 40px;
+  height: 40px;
+  margin-right: 1rem;
 }
 
 .student-title {
@@ -117,20 +123,36 @@
   .grid-element {
     max-width: 100%;
     flex: 0 0 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 
     &:not(:first-child) {
-      margin-top: 2rem;
+      padding-top: 2rem;
     }
 
     @media (min-width: 992px) {
       & {
         max-width: 33.3333%;
         flex: 0 0 33.33333%;
-        margin-left: 4rem;
+        //flex-direction: row;
+        align-items: flex-start;
+        padding-left: 3rem;
+        padding-right: 3rem;
+      }
+
+      &.grid-2-elements {
+        max-width: 50%;
+        flex: 0 0 40%;
+      }
+
+      &.grid-3-elements {
+        max-width: 33.3333%;
+        flex: 0 0 33.33333%;
       }
 
       &:not(:first-child) {
-        margin-top: 0rem;
+        padding-top: 0rem;
       }
 
       &:not(:last-child) {
@@ -148,14 +170,13 @@
       }
     }
 
-    ul {
+    ul.grid-element-list {
       list-style: none;
       padding-left: 0;
       margin-top: 1rem;
 
       li {
         display: flex;
-        justify-content: center;
 
         @media (min-width: 992px) {
           & {
@@ -176,13 +197,6 @@
 
 .presentation-info {
   background-color: $dark-light;
-  text-align: center;
-
-  @media (min-width: 768px) {
-    & {
-      text-align: left;
-    }
-  }
 
   .student-subtitle {
     justify-content: center;
@@ -194,18 +208,25 @@
     }
   }
 
-  .col {
+  .presentation-info-element {
     padding-bottom: 1.5rem;
-  }
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 
-  ul {
-    list-style: none;
-    color: var(--primary);
-    padding-left: 0.5rem;
+    @media (min-width: 768px) {
+      align-items: flex-start;
+    }
 
-    li {
-      i {
-        margin-right: 0.5rem;
+    ul {
+      list-style: none;
+      color: var(--primary);
+      padding-left: 0.5rem;
+
+      li {
+        i {
+          margin-right: 0.5rem;
+        }
       }
     }
   }
