menu student fix

--- a/app/Resources/views/course_info/view/student_vertical_menu.html.twig
+++ b/app/Resources/views/course_info/view/student_vertical_menu.html.twig
@@ -10,10 +10,10 @@
             <a class="nav-link" href="#evaluation-section">{{ 'app.view.student.sidebar.evaluation' | trans }}</a>
         </li>
         <li class="nav-item vertical-text mt-2">
-            <a class="nav-link" href="#equipments-section">{{ 'app.view.student.sidebar.equipment' | trans }}</a>
+            <a class="nav-link" href="#equipment-section">{{ 'app.view.student.sidebar.equipment' | trans }}</a>
         </li>
         <li class="nav-item vertical-text mt-2">
-            <a class="nav-link" href="#info-section">{{ 'app.view.student.sidebar.info' | trans }}</a>
+            <a class="nav-link" href="#information-section">{{ 'app.view.student.sidebar.info' | trans }}</a>
         </li>
     </ul>
 </nav>
