--- a/app/Resources/views/course_info/view/student_prerequisite.html.twig
+++ b/app/Resources/views/course_info/view/student_prerequisite.html.twig
@@ -1,4 +1,4 @@
-<section id="prerequisite-section" class="content">
+<section id="prerequisite-section" class="pb-5">
     <h3 class="text-primary">Prérequis</h3>
     <input type="image" src="/build/images/information_photo.jpg">
     <div class="student-grid pt-5" style="clear: both;">
@@ -26,9 +26,7 @@
                     </li>
                 {% endfor %}
                 {% else %}
-                    <div class="text-center">
-                        <div class="p-2 empty-element">Pas de prérequis</div>
-                    </div>
+                    <div class="p-2 empty-element">Pas de prérequis</div>
                 {% endif %}
             </ul>
         </div>
@@ -47,9 +45,7 @@
                     </li>
                 {% endfor %}
                 {% else %}
-                    <div class="text-center">
-                        <div class="p-2 empty-element">Pas de remise à niveau</div>
-                    </div>
+                    <div class="p-2 empty-element">Pas de remise à niveau</div>
                 {% endif %}
             </ul>
         </div>
