--- a/app/Resources/assets/scss/student_view.scss
+++ b/app/Resources/assets/scss/student_view.scss
@@ -94,6 +94,7 @@
 
 .student-subtitle {
   display: flex;
+  margin-bottom: 1rem;
 }
 
 .title-underlined {
@@ -103,7 +104,7 @@
   &:after {
     content: '';
     position: absolute;
-    width: 70px;
+    width: 50px;
     height: 1px;
     background-color: var(--primary);
     top: 100%;
@@ -169,34 +170,44 @@
         justify-content: flex-start;
       }
     }
-
-    ul.grid-element-list {
-      list-style: none;
-      padding-left: 0;
-      margin-top: 1rem;
-
-      li {
-        display: flex;
-
-        @media (min-width: 992px) {
-          justify-content: flex-start;
-        }
-
-        i {
-          color: var(--primary);
-          margin-right: 0.8rem;
-          margin-top: 0.3rem;
-        }
-      }
-    }
   }
 }
 
+ul.student-list {
+  list-style: none;
+  padding-left: 0;
+
+  &.list-dotted {
+    & > li:before {
+      content: "\2022";
+      color: var(--primary);
+      font-weight: bold;
+      display: inline-block;
+      width: 1em;
+    }
+  }
+
+  li {
+    display: flex;
+    margin-bottom: 0.3rem;
+
+    @media (min-width: 992px) {
+      justify-content: flex-start;
+    }
+
+    i {
+      color: var(--primary);
+      margin-right: 0.8rem;
+      margin-top: 0.3rem;
+    }
+  }
+}
 
 .presentation-info {
   background-color: $dark-light;
 
   .student-subtitle {
+    margin-bottom: 0;
     justify-content: center;
 
     @media (min-width: 768px) {
@@ -217,12 +228,10 @@
     ul {
       list-style: none;
       color: var(--primary);
-      padding-left: 0.5rem;
+      padding-left: 1.5rem;
 
       li {
-        i {
-          margin-right: 0.5rem;
-        }
+        margin-bottom: 0;
       }
     }
   }
