--- a/app/Resources/views/course_info/view/student_prerequisite.html.twig
+++ b/app/Resources/views/course_info/view/student_prerequisite.html.twig
@@ -1,53 +1,55 @@
 <section id="prerequisite-section" class="pb-5">
-    <h3 class="text-primary">{{ 'app.view.student.tabs.prerequisites' | trans }}</h3>
-    <input type="image" src="/build/images/information_photo.jpg">
-    <div class="student-grid pt-5" style="clear: both;">
+    <div class="student-title">
+        <h3 class="text-primary">{{ 'app.view.student.tabs.prerequisites' | trans }}</h3>
+        <img type="image" src="{{ asset('/build/images/information_photo.jpg') }}" alt="">
+    </div>
+    <div class="student-grid">
         <div class="grid-element">
             {% if courseInfo.coursePrerequisites is not empty %}
-            <div class="student-subtitle">
-                <span class="text-bold">{{ 'app.view.student.prerequisites.prerequisites_description' | trans }}</span>
-            </div>
-            <ul>
-                {% for prerequisite in courseInfo.coursePrerequisites %}
-                    <li>
-                        <i class="fas fa-check text-primary"></i>
-                        <div>
-                            {{ prerequisite.description }}
-                            <p>
-                                {{ 'app.view.student.prerequisites.associate_courses' | trans }}
-                                {% for course in prerequisite.courses %}
-                                    {% if not loop.first %}
-                                        ,
-                                    {% endif %}
-                                    {{ course.title }}
-                                {% endfor %}
-                            </p>
-                        </div>
-                    </li>
-                {% endfor %}
-                {% else %}
-                    <div class="p-2 empty-element">{{ 'app.view.student.prerequisites.empty_prerequiste' | trans }}</div>
-                {% endif %}
-            </ul>
+                <div class="student-subtitle">
+                    <span class="text-bold">{{ 'app.view.student.prerequisites.prerequisites_description' | trans }}</span>
+                </div>
+                <ul class="student-list list-dotted">
+                    {% for prerequisite in courseInfo.coursePrerequisites %}
+                        <li>
+                            <div class="d-flex flex-column">
+                                <span>{{ prerequisite.description }}</span>
+                                {% if prerequisite.courses is not empty %}
+                                    <span class="small font-italic">
+                                        {{ 'app.view.student.prerequisites.associate_courses' | trans }}
+                                        {% for course in prerequisite.courses %}
+                                            {% if not loop.first %}
+                                                ,
+                                            {% endif %}
+                                            {{ course.title }}
+                                        {% endfor %}
+                                    </span>
+                                {% endif %}
+                            </div>
+                        </li>
+                    {% endfor %}
+                </ul>
+            {% else %}
+                <div class="p-2 empty-element">{{ 'app.view.student.prerequisites.empty_prerequiste' | trans }}</div>
+            {% endif %}
         </div>
         <div class="grid-element">
             {% if courseInfo.courseTutoringResources is not empty %}
-            <div class="student-subtitle">
-                <span class="text-bold">{{ 'app.view.student.prerequisites.tutoring_resources_description' | trans }}</span>
-            </div>
-            <ul>
-                {% for tutoringResource in courseInfo.courseTutoringResources %}
-                    <li>
-                        <i class="fas fa-check text-primary"></i>
-                        <div>
-                            {{ tutoringResource.description }}
-                        </div>
-                    </li>
-                {% endfor %}
-                {% else %}
-                    <div class="p-2 empty-element">{{ 'app.view.student.prerequisites.empty_tutoring_resources' | trans }}</div>
-                {% endif %}
-            </ul>
+                <div class="student-subtitle">
+                    <span class="text-bold">{{ 'app.view.student.prerequisites.tutoring_resources_description' | trans }}</span>
+                </div>
+                <ul class="student-list list-dotted">
+                    {% for tutoringResource in courseInfo.courseTutoringResources %}
+                        <li>
+                            <div>
+                                {{ tutoringResource.description }}
+                            </div>
+                        </li>
+                    {% endfor %}
+                </ul>
+            {% else %}
+                <div class="p-2 empty-element">{{ 'app.view.student.prerequisites.empty_tutoring_resources' | trans }}</div>
+            {% endif %}
         </div>
     </div>
 </section>
