--- a/app/Resources/assets/scss/student_view.scss
+++ b/app/Resources/assets/scss/student_view.scss
@@ -1,28 +1,5 @@
 .background_student {
-  background-color: black ;
-  font-family: "Apex New Book";
-  color: white;
-}
-
-.progress {
-  background-color: #202020;
-  -webkit-box-shadow: none;
-  box-shadow: none;
-}
-
-.dark-light{
-  background-color: #202020;
-}
-
-.student-icon{
-  vertical-align: middle;
-  width: 20px;
-  height: 20px;
-}
-
-.li-valid{
-  margin-right: 0px;
-  list-style-type: none;
+  //font-family: "Apex New Book";
 }
 
 .empty-element{
@@ -31,240 +8,258 @@
   color: #7d8293;
 }
 
-#student-sidebar {
-  top: 10px;
-  left: 25px;
-  position: fixed;
-  z-index: 10;
-  display: none;
-  @media (min-width: 768px) {
-    display: block;
-  }
+.student-view {
+  background-color: black;
+  color: white;
+  padding-top: 2rem;
 
-  .vertical-text {
-    -webkit-transform: rotate(-180deg);
-    -moz-transform: rotate(-180deg);
-    -ms-transform: rotate(-180deg);
-    -o-transform: rotate(-180deg);
-    writing-mode: vertical-lr;
+  #student-sidebar {
+    //top: 10px;
+    //left: 25px;
+    position: fixed;
+    z-index: 10;
+    display: none;
 
-    a {
-      color: grey;
-      border-left: 3px solid grey;
+    @media (min-width: 768px) {
+      display: block;
+    }
 
-      &.active {
-        color: #46aed8;
-        border-left: 3px solid #46aed8;
+    .vertical-text {
+      -webkit-transform: rotate(-180deg);
+      -moz-transform: rotate(-180deg);
+      -ms-transform: rotate(-180deg);
+      -o-transform: rotate(-180deg);
+      writing-mode: vertical-lr;
+
+      a {
+        color: grey;
+        border-left: 3px solid grey;
+
+        &.active {
+          color: #46aed8;
+          border-left: 3px solid #46aed8;
+        }
       }
     }
   }
-}
 
-.icon-20 {
-  width: 20px;
-  height: 20px;
-  margin-right: 0.5rem;
-}
+  .student-content {
+    padding-left: 0;
 
-.icon-30 {
-  width: 30px;
-  height: 30px;
-  margin-right: 1rem;
-}
-
-.icon-40 {
-  width: 40px;
-  height: 40px;
-  margin-right: 1rem;
-}
-
-.student-title {
-  width: 100%;
-
-  h1 {
-    color: var(--primary);
-    margin-bottom: 1.5rem;
-  }
-
-  img {
-    width: 100%;
-    margin-bottom: 1.5rem;
-  }
-}
-
-.student-subtitle {
-  display: flex;
-  margin-bottom: 1rem;
-}
-
-.title-underlined {
-  position: relative;
-  display: block;
-
-  &:after {
-    content: '';
-    position: absolute;
-    width: 50px;
-    height: 1px;
-    background-color: var(--primary);
-    top: 100%;
-    left: 0;
-  }
-}
-
-.student-progress {
-  height: 5px;
-}
-
-.student-grid {
-  display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
-  flex-direction: column;
-
-  @media (min-width: 992px) {
-    flex-direction: row;
-  }
-
-  .grid-element {
-    max-width: 100%;
-    flex: 0 0 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-
-    &:not(:first-child) {
-      padding-top: 2rem;
+    @media (min-width: 768px) {
+      padding-left: 70px;
     }
 
-    @media (min-width: 992px) {
-      max-width: 33.3333%;
-      flex: 0 0 33.33333%;
-      align-items: flex-start;
-      padding-left: 3rem;
-      padding-right: 3rem;
+    .icon-20 {
+      width: 20px;
+      height: 20px;
+      margin-right: 0.5rem;
+    }
 
-      &.grid-2-elements {
-        max-width: 50%;
-        flex: 0 0 40%;
+    .icon-30 {
+      width: 30px;
+      height: 30px;
+      margin-right: 1rem;
+    }
+
+    .icon-40 {
+      width: 40px;
+      height: 40px;
+      margin-right: 1rem;
+    }
+
+    .student-title {
+      width: 100%;
+
+      h1 {
+        color: var(--primary);
+        margin-bottom: 1.5rem;
       }
 
-      &.grid-3-elements {
-        max-width: 33.3333%;
-        flex: 0 0 33.33333%;
-      }
-
-      &:not(:first-child) {
-        padding-top: 0rem;
-      }
-
-      &:not(:last-child) {
-        border-right: 1px solid;
+      img {
+        width: 100%;
+        margin-bottom: 1.5rem;
       }
     }
 
     .student-subtitle {
+      display: flex;
+      margin-bottom: 1rem;
+    }
+
+    .title-underlined {
+      position: relative;
+      display: block;
+
+      &:after {
+        content: '';
+        position: absolute;
+        width: 50px;
+        height: 1px;
+        background-color: var(--primary);
+        top: 100%;
+        left: 0;
+      }
+    }
+
+    .student-progress {
+      height: 5px;
+      background-color: #202020;
+      -webkit-box-shadow: none;
+      box-shadow: none;
+    }
+
+    .student-grid {
+      display: flex;
       justify-content: center;
+      flex-wrap: wrap;
+      flex-direction: column;
 
       @media (min-width: 992px) {
-        justify-content: flex-start;
+        flex-direction: row;
+      }
+
+      .grid-element {
+        max-width: 100%;
+        flex: 0 0 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+
+        &:not(:first-child) {
+          padding-top: 2rem;
+        }
+
+        @media (min-width: 992px) {
+          max-width: 33.3333%;
+          flex: 0 0 33.33333%;
+          align-items: flex-start;
+          padding-left: 3rem;
+          padding-right: 3rem;
+
+          &.grid-2-elements {
+            max-width: 50%;
+            flex: 0 0 40%;
+          }
+
+          &.grid-3-elements {
+            max-width: 33.3333%;
+            flex: 0 0 33.33333%;
+          }
+
+          &:not(:first-child) {
+            padding-top: 0rem;
+          }
+
+          &:not(:last-child) {
+            border-right: 1px solid;
+          }
+        }
+
+        .student-subtitle {
+          justify-content: center;
+
+          @media (min-width: 992px) {
+            justify-content: flex-start;
+          }
+        }
       }
     }
-  }
-}
 
-ul.student-list {
-  list-style: none;
-  padding-left: 0;
-
-  &.list-dotted {
-    & > li:before {
-      content: "\2022";
-      color: var(--primary);
-      font-weight: bold;
-      display: inline-block;
-      width: 1em;
-    }
-  }
-
-  li {
-    display: flex;
-    margin-bottom: 0.3rem;
-
-    @media (min-width: 992px) {
-      justify-content: flex-start;
-    }
-
-    i {
-      color: var(--primary);
-      margin-right: 0.8rem;
-      margin-top: 0.3rem;
-    }
-  }
-}
-
-.presentation-info {
-  background-color: $dark-light;
-
-  .student-subtitle {
-    margin-bottom: 0;
-    justify-content: center;
-
-    @media (min-width: 768px) {
-      justify-content: flex-start;
-    }
-  }
-
-  .presentation-info-element {
-    padding-bottom: 1.5rem;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-
-    @media (min-width: 768px) {
-      align-items: flex-start;
-    }
-
-    ul {
+    ul.student-list {
       list-style: none;
-      color: var(--primary);
-      padding-left: 1.5rem;
+      padding-left: 0;
+
+      &.list-dotted {
+        & > li:before {
+          content: "\2022";
+          color: var(--primary);
+          font-weight: bold;
+          display: inline-block;
+          width: 1em;
+        }
+      }
 
       li {
+        display: flex;
+        margin-bottom: 0.3rem;
+
+        @media (min-width: 992px) {
+          justify-content: flex-start;
+        }
+
+        i {
+          color: var(--primary);
+          margin-right: 0.8rem;
+          margin-top: 0.3rem;
+        }
+      }
+    }
+
+    .presentation-info {
+      background-color: $dark-light;
+
+      .student-subtitle {
         margin-bottom: 0;
+        justify-content: center;
+
+        @media (min-width: 768px) {
+          justify-content: flex-start;
+        }
+      }
+
+      .presentation-info-element {
+        padding-bottom: 1.5rem;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+
+        @media (min-width: 768px) {
+          align-items: flex-start;
+        }
+
+        ul {
+          list-style: none;
+          color: var(--primary);
+          padding-left: 1.5rem;
+
+          li {
+            margin-bottom: 0;
+          }
+        }
       }
     }
-  }
-}
 
 
-.presentation-summary {
-  width: 100%;
+    .presentation-summary {
+      width: 100%;
 
-  .media {
-    @media (min-width: 768px) {
-      float: left;
-      max-width: 50%;
-    }
+      .media {
+        @media (min-width: 768px) {
+          float: left;
+          max-width: 50%;
+        }
 
-    & > img, & > div.embed-responsive {
-      margin: auto;
-      max-height: calc(100% - 1rem);
+        & > img, & > div.embed-responsive {
+          margin: auto;
+          max-height: calc(100% - 1rem);
 
-      @media (min-width: 768px) {
-        max-width: calc(100% - 1rem);
+          @media (min-width: 768px) {
+            max-width: calc(100% - 1rem);
+          }
+        }
       }
-    }
-  }
 
-  .media-video {
-    width: 100%;
-  }
+      .media-video {
+        width: 100%;
+      }
 
-  .summary {
-    margin-top: 1rem;
-    @media (min-width: 768px) {
-      margin-top: 0;
+      .summary {
+        margin-top: 1rem;
+        @media (min-width: 768px) {
+          margin-top: 0;
+        }
+      }
     }
   }
 }
