--- a/app/Resources/views/course_info/view/view.html.twig
+++ b/app/Resources/views/course_info/view/view.html.twig
@@ -2,15 +2,17 @@
 
 
 {% block main %}
-    <div class="background_student">
-        {% include 'course_info/view/student_vertical_menu.html.twig' %}
-        <div class="container-fluid p-0 background_student col-10">
-            {% include 'course_info/view/student_presentation.html.twig' %}
-            {% include 'course_info/view/student_prerequisite.html.twig' %}
-            {% include 'course_info/view/student_objectives.html.twig' %}
-            {% include 'course_info/view/student_evaluation.html.twig' %}
-            {% include 'course_info/view/student_equipments.html.twig' %}
-            {% include 'course_info/view/student_info.html.twig' %}
+    <div class="student-view">
+        <div class="container">
+            {% include 'course_info/view/student_vertical_menu.html.twig' %}
+            <div class="student-content">
+                {% include 'course_info/view/student_presentation.html.twig' %}
+                {% include 'course_info/view/student_prerequisite.html.twig' %}
+                {% include 'course_info/view/student_objectives.html.twig' %}
+                {% include 'course_info/view/student_evaluation.html.twig' %}
+                {% include 'course_info/view/student_equipments.html.twig' %}
+                {% include 'course_info/view/student_info.html.twig' %}
+            </div>
         </div>
     </div>
 {% endblock %}
